[package]
name = "shortener"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
axum = "0.6.17"
hyper = { version = "0.14.26", features = ["full"] }
tokio = { version = "1.28.0", features = ["full"] }
tower = "0.4.13"
